[gd_scene load_steps=23 format=3 uid="uid://dnf0p3ul3x7ap"]

[ext_resource type="Script" uid="uid://vpnhrcq34ec0" path="res://src/scripts/PauseMenu.gd" id="1_s4s53"]
[ext_resource type="Texture2D" uid="uid://ddiwflpgmbdbm" path="res://src/assets/Main_Menu/Defeat.png" id="2_bhx5b"]
[ext_resource type="Shader" uid="uid://djkroto8tombx" path="res://src/materials/MovingLetras.gdshader" id="3_bhx5b"]
[ext_resource type="FontFile" uid="uid://dcwce76p4c5qo" path="res://src/assets/MenuPlaceHolders/GREEN SLIME.otf" id="4_kyatx"]
[ext_resource type="Texture2D" uid="uid://fwpdgw2jxeh" path="res://src/assets/Main_Menu/Victory_Glow.png" id="5_801my"]
[ext_resource type="Texture2D" uid="uid://yngrmlbtjjd3" path="res://src/assets/Main_Menu/Victory.png" id="5_kyatx"]
[ext_resource type="Texture2D" uid="uid://cxhceudy8aqfj" path="res://src/assets/Main_Menu/Gloop_Title.png" id="5_spjqj"]

[sub_resource type="Gradient" id="Gradient_e38yt"]
offsets = PackedFloat32Array(0.754209)
colors = PackedColorArray(0, 0, 0, 0.481)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_x7vtn"]
gradient = SubResource("Gradient_e38yt")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fg2at"]
shader = ExtResource("3_bhx5b")
shader_parameter/amplitude = 1.0
shader_parameter/frequency = 10.0
shader_parameter/speed = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t5gsx"]
shader = ExtResource("3_bhx5b")
shader_parameter/amplitude = 1.0
shader_parameter/frequency = 10.0
shader_parameter/speed = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jjnpb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qx2bx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e2s0q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bexsm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_no6qo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1lamk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_56s82"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j53iq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xjvh2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jtcgo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o4wrs"]

[node name="Win_Lose Screen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s4s53")

[node name="Defeat_Screen" type="CanvasLayer" parent="."]
visible = false

[node name="BG" type="TextureRect" parent="Defeat_Screen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_x7vtn")

[node name="Defeat_Text" type="TextureRect" parent="Defeat_Screen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -390.0
offset_top = -261.0
offset_right = 1177.0
offset_bottom = 251.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_bhx5b")
stretch_mode = 3

[node name="Texto de derrota" type="Label" parent="Defeat_Screen"]
material = SubResource("ShaderMaterial_fg2at")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -538.0
offset_top = 30.0
offset_right = 523.0
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.6, 0.811765, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("4_kyatx")
theme_override_font_sizes/font_size = 55
text = "You failed to consume it all... Try again, hungry slime!"

[node name="VBoxContainer" type="VBoxContainer" parent="Defeat_Screen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = 126.0
offset_right = 205.0
offset_bottom = 354.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="TryAgain" type="Button" parent="Defeat_Screen/VBoxContainer"]
material = SubResource("ShaderMaterial_t5gsx")
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.282325, 0.899759, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("4_kyatx")
theme_override_font_sizes/font_size = 55
theme_override_styles/focus = SubResource("StyleBoxEmpty_jjnpb")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_qx2bx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_e2s0q")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_bexsm")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_no6qo")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_1lamk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_56s82")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_j53iq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xjvh2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jtcgo")
theme_override_styles/normal = SubResource("StyleBoxEmpty_o4wrs")
text = "Try Again"

[node name="Main Menu" type="Button" parent="Defeat_Screen/VBoxContainer"]
material = SubResource("ShaderMaterial_t5gsx")
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.282325, 0.899759, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("4_kyatx")
theme_override_font_sizes/font_size = 55
theme_override_styles/focus = SubResource("StyleBoxEmpty_jjnpb")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_qx2bx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_e2s0q")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_bexsm")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_no6qo")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_1lamk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_56s82")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_j53iq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xjvh2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jtcgo")
theme_override_styles/normal = SubResource("StyleBoxEmpty_o4wrs")
text = "Main Menu"

[node name="Win_Screen" type="CanvasLayer" parent="."]
visible = false

[node name="BG" type="TextureRect" parent="Win_Screen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_x7vtn")

[node name="Defeat_Text2" type="TextureRect" parent="Win_Screen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -445.0
offset_top = -360.0
offset_right = 1728.0
offset_bottom = 630.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.405019, 0.365019)
texture = ExtResource("5_801my")
stretch_mode = 3

[node name="Defeat_Text" type="TextureRect" parent="Win_Screen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -401.0
offset_top = -294.0
offset_right = 1220.0
offset_bottom = 356.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_kyatx")
stretch_mode = 3

[node name="Texto de Vit√≥ria" type="Label" parent="Win_Screen"]
material = SubResource("ShaderMaterial_fg2at")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -371.5
offset_top = 27.0
offset_right = 356.5
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.6, 0.811765, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("4_kyatx")
theme_override_font_sizes/font_size = 55
text = "World consumed. You may burp now."

[node name="VBoxContainer" type="VBoxContainer" parent="Win_Screen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = 127.0
offset_right = 205.0
offset_bottom = 355.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Playgain" type="Button" parent="Win_Screen/VBoxContainer"]
material = SubResource("ShaderMaterial_t5gsx")
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.282325, 0.899759, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("4_kyatx")
theme_override_font_sizes/font_size = 55
theme_override_styles/focus = SubResource("StyleBoxEmpty_jjnpb")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_qx2bx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_e2s0q")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_bexsm")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_no6qo")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_1lamk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_56s82")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_j53iq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xjvh2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jtcgo")
theme_override_styles/normal = SubResource("StyleBoxEmpty_o4wrs")
text = "Play Again"

[node name="Main Menu" type="Button" parent="Win_Screen/VBoxContainer"]
material = SubResource("ShaderMaterial_t5gsx")
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.282325, 0.899759, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("4_kyatx")
theme_override_font_sizes/font_size = 55
theme_override_styles/focus = SubResource("StyleBoxEmpty_jjnpb")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_qx2bx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_e2s0q")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_bexsm")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_no6qo")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_1lamk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_56s82")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_j53iq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xjvh2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jtcgo")
theme_override_styles/normal = SubResource("StyleBoxEmpty_o4wrs")
text = "Main Menu"

[node name="PauseMenu" type="CanvasLayer" parent="."]
visible = false

[node name="BG" type="TextureRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_x7vtn")

[node name="Defeat_Text" type="TextureRect" parent="PauseMenu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -340.0
offset_top = 30.0
offset_right = 1028.0
offset_bottom = 542.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_spjqj")

[node name="Defeat_Text2" type="TextureRect" parent="PauseMenu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -340.0
offset_top = 30.0
offset_right = 1028.0
offset_bottom = 542.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_spjqj")

[node name="Texto de derrota" type="Label" parent="PauseMenu"]
material = SubResource("ShaderMaterial_fg2at")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = 25.0
offset_right = 256.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.6, 0.811765, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("4_kyatx")
theme_override_font_sizes/font_size = 55
text = "Even slimes need to digest."
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = 125.0
offset_right = 205.0
offset_bottom = 353.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="TryAgain2" type="Button" parent="PauseMenu/VBoxContainer"]
process_mode = 3
material = SubResource("ShaderMaterial_t5gsx")
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.282325, 0.899759, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("4_kyatx")
theme_override_font_sizes/font_size = 55
theme_override_styles/focus = SubResource("StyleBoxEmpty_jjnpb")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_qx2bx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_e2s0q")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_bexsm")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_no6qo")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_1lamk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_56s82")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_j53iq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xjvh2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jtcgo")
theme_override_styles/normal = SubResource("StyleBoxEmpty_o4wrs")
text = "Resume
"

[node name="Restart" type="Button" parent="PauseMenu/VBoxContainer"]
material = SubResource("ShaderMaterial_t5gsx")
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.282325, 0.899759, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("4_kyatx")
theme_override_font_sizes/font_size = 55
theme_override_styles/focus = SubResource("StyleBoxEmpty_jjnpb")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_qx2bx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_e2s0q")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_bexsm")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_no6qo")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_1lamk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_56s82")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_j53iq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xjvh2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jtcgo")
theme_override_styles/normal = SubResource("StyleBoxEmpty_o4wrs")
text = "Restart"

[node name="Exit To Menu" type="Button" parent="PauseMenu/VBoxContainer"]
material = SubResource("ShaderMaterial_t5gsx")
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.282325, 0.899759, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("4_kyatx")
theme_override_font_sizes/font_size = 55
theme_override_styles/focus = SubResource("StyleBoxEmpty_jjnpb")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_qx2bx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_e2s0q")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_bexsm")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_no6qo")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_1lamk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_56s82")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_j53iq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xjvh2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jtcgo")
theme_override_styles/normal = SubResource("StyleBoxEmpty_o4wrs")
text = "Exit to Menu"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="Defeat_Screen/VBoxContainer/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="Defeat_Screen/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Win_Screen/VBoxContainer/Playgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="Win_Screen/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/TryAgain2" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Restart" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Exit To Menu" to="." method="_on_main_menu_pressed"]
